--- a/about.html
+++ b/about.html
@@ -68,9 +68,9 @@
 <p>At the moment I am working on my master’s dissertation <a href="https://github.com/dhil/links-effect-handlers"><em>Handlers for Algebraic Effects in Links</em></a>. My aim is to implement first-class handlers for algebraic effects in the <a href="http://groups.inf.ed.ac.uk/links/">functional web-programming Links</a>.</p>
 <h2 id="you-can-find-me-online" class="page-header">You can find me online</h2>
 <ul>
-<li>I have published some software projects at my <a href="https://github.com/dhil">GitHub</a>.</li>
-<li>You can follow me on <a href="https://twitter.com/intent/user?screen_name=dhillerstrom">Twitter (@dhillerstrom)</a>.</li>
-<li>And you can find me on <a href="https://uk.linkedin.com/in/danielhillerstrom">Facebook for professionals aka. LinkedIn</a>.</li>
+<li>I have published various (software) projects at <a href="https://github.com/dhil">GitHub</a>.</li>
+<li>Occasionally, I tweet. You can follow me on <a href="https://twitter.com/intent/user?screen_name=dhillerstrom">Twitter (@dhillerstrom)</a>.</li>
+<li>You can also find me on <a href="https://uk.linkedin.com/in/danielhillerstrom">Facebook for professionals aka. LinkedIn</a>.</li>
 <li>I usually idle at <a href="irc://irc.freenode.net/#math">##math</a>, <a href="irc://irc.freenode.net/haskell">#haskell</a> and <a href="irc://irc.freenode.net/#programming">##programming</a> at freenode.org.</li>
 </ul>
 
