Added new content

--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 ---
-title: 404 Not Found
+title: 404 Page Not Found
 ---
-The request page <code><script type="text/javascript">document.write(document.location)</script></code> does not exist.
+The requested page does not exist.
 You may want to return to <a href="/index.html">the front page</a>.
