--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
     <meta name="referrer" content="origin" />
     <meta name="robots" content="index,follow" />
     <meta property="og:image" content="http://blog.dhil.net/images/haskell-logo.png"/>
-    <title>404 Not Found | Daniel Hillerstr&ouml;m</title>
+    <title>404 Page Not Found | Daniel Hillerstr&ouml;m</title>
     <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.customizations.css" />
   </head>
@@ -61,9 +61,8 @@
       <div class="container main-content">
 	<div class="row">
 	  <div class="col-sm-10">
-	    <h1 class="page-header">404 Not Found</h1>
-The request page <code></code>
-does not exist. You may want to return to <a href="/index.html">the front page</a>.
+	    <h1 class="page-header">404 Page Not Found</h1>
+The requested page does not exist. You may want to return to <a href="/index.html">the front page</a>.
 
 	  </div>
 	</div> <!-- /.row -->
