--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 ---
-title: 404 Page Not Found
+title: Error 404: Page Not Found
 ---
 The requested page does not exist.
 You may want to return to <a href="/index.html">the front page</a>.
