--- a/archive.html
+++ b/archive.html
@@ -12,7 +12,7 @@
     <meta name="robots" content="index,follow" />
     <meta property="og:image" content="http://blog.dhil.net/images/haskell-logo.png" />
     <title>Archive | Daniel Hillerstr&ouml;m</title>
-    <link rel="stylesheet" type="text/css" href="./static/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="./static/css/bootstrap.customizations.css" />
   </head>
   <body>
@@ -90,8 +90,8 @@
     <!-- Scroll-to-top end -->
 
     <!-- Load scripts -->
-    <script src="./static/js/jquery-2.1.3.min.js"></script>
-    <script src="./static/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="./static/js/navbar.js"></script>
     <script src="./static/js/init.js"></script>
     <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
