--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
     <meta name="referrer" content="origin" />
     <meta name="robots" content="index,follow" />
     <meta property="og:image" content="http://blog.dhil.net/images/haskell-logo.png"/>
-    <title>Error 404: Page Not Found | Daniel Hillerstr&ouml;m</title>
+    <title>Error 404: Page Not Found | Daniel Hillerstr&#246;m</title>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.customizations.css" />
   </head>
