--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="referrer" content="origin" />
     <meta name="robots" content="index,follow" />
     <meta property="og:image" content="http://blog.dhil.net/images/haskell-logo.png" />
-    <title>Theoretical Computer Science | Daniel Hillerstr&ouml;m</title>
+    <title>Theoretical Computer Science | Daniel Hillerström</title>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="./static/css/bootstrap.customizations.css" />
   </head>
