--- a/archive.html
+++ b/archive.html
@@ -64,6 +64,10 @@
 <ul>
   
   <li>
+    <a href="./posts/2015-07-19-closed-handlers-for-algebraic-effects-in-links.html">(Closed) Handlers for Algebraic Effects in Links</a> - July 19, 2015
+  </li>
+  
+  <li>
     <a href="./posts/2015-07-04-blog-rebooted.html">Blog Rebooted</a> - July  4, 2015
   </li>
   
